src/ui/stylesheet.styl
// Type
@font-face
	font-family 'Inter'
	font-style normal italic
	font-weight 100 900
	src url('../font/inter_100_900.woff2')
html
	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace

// Single-direction margin
*
	margin-bottom 0
*:first-child
	margin-top 0 !important

// Theming
.theme-light
	--color-control rgba(0,0,0,0.05)
	--color-control-focused rgba(0,0,0,0.10)
	--color-control-toggled rgba(0,0,0,0.50)
	--color-paper white
	--color-paper-action aliceblue
	--color-paper-border gainsboro
	--color-paper-callout rgba(0,0,0,0.05)
	--color-signal-caution wheat
	--color-signal-error salmon
	--color-signal-ok lightseagreen
	--color-signal-unknown gray
	--color-writing rgba(0,0,0,0.9)
	--color-writing-action mediumslateblue
	--color-writing-highlight gold
	color-scheme light
.theme-dark
	--color-control rgba(0,0,0,0.05)
	--color-control-focused rgba(0,0,0,0.10)
	--color-control-toggled rgba(0,0,0,0.50)
	--color-paper #1d263b
	--color-paper-action #1e2846
	--color-paper-border slategrey
	--color-paper-callout rgba(0,0,0,0.25)
	--color-signal-caution wheat
	--color-signal-error salmon
	--color-signal-ok lightseagreen
	--color-signal-unknown gray
	--color-writing white
	--color-writing-action wheat
	--color-writing-highlight gold
	color-scheme dark

// General
*
	box-sizing border-box
*:focus
	outline-color var(--color-writing-highlight)
.md
	cursor default
	overflow-wrap anywhere

// Body
body
	background-color var(--color-paper)
	color var(--color-writing)
	display flex
	font 500 14px/1.6 'Inter', sans-serif
	height 100vh
	margin 0

// Paragraphs
p
	margin 0.7em 0 0 0
hr
	border 1px solid rgba(0,0,0,0.1)
	margin 1em 0 0 0

// Formatted text
a
	color mediumslateblue
	overflow-wrap anywhere
	text-decoration none
a[href^='/']
a[href^='#']
	-webkit-box-decoration-break clone
	background rgba(0,0,0,0.05)
	border-radius 3px
	box-decoration-break clone
	box-shadow 0 0 1px black
	padding 3px 8px
address
	font-style normal

// Verbatim text
blockquote
	border-left 3px solid var(--color-paper-border)
	color green
	margin 0.5em 0 0 2px
	opacity 0.8
	padding 0 0.5em
code
pre
	background var(--color-paper-callout)
	font-family var(--typeface-mono)
	font-size 12px
	overflow-wrap anywhere
	white-space pre-wrap
code
	padding 0 0.25em
pre
	border 1px solid
	display inline-block
	padding 1em
	& code
		background transparent

// Spoilers
.md-spoiler-text
	background var(--color-writing)
	padding 0.1em 0.25em
	opacity 0.77
	& a
		opacity 0
	&:hover
		background var(--color-control-focused)
		opacity 1
		& a
			opacity 1

// Lists
menu
ol
ul
	margin 0
	padding 0
	& ul
		list-style-type initial
.md ol
.md ul
	margin 0.5em 0 0 0
	padding-inline-start 18px
.md ol ol
.md ol ul
.md ul ol
.md ul ul
	margin 0.25em 0 0 0

// Headers
h1
h2
h3
h4
h5
h6
	margin 1em 0 0 0
h1
	font-size 1.5em
h2
	font-size 1.35em
h3
	font-size 1.2em
h4
h5
h6
	font-size 1em

// Tables
table
	font-size 12px
	margin 0.5em 0 0 0
	overflow-wrap normal
tr:nth-child(odd)
	background rgba(0,0,0,0.05)
	thead &
		background rgba(0,0,0,0.5)
		color white
td
th
	padding 0 3px
	vertical-align top

// Media
figure
	margin 0
iframe
	background black
	border 0
	border-radius 2px
img
	border-radius 2px
	display block
video
	background black
	border-radius 2px
	display block

// Interactive
button
input
	background inherit
	border 0
	color inherit
	cursor pointer
	font inherit
	letter-spacing inherit
	line-height inherit
	padding 0
	word-spacing inherit

